@@ -2,7 +2,7 @@
 // { dg-options "-std=c++0x" }
 
 template<class U, class V> //#1
-struct foo {}; // { dg-error "provided for|foo" }
+struct foo {};
 
 template<class U, class V=char>
 struct P {};
@@ -10,8 +10,8 @@ struct P {};
 template<template<class... U> class... TT>
 struct bar {
     template<class... Args>
-    using mem = P<TT<Args...>...>;//#2 { dg-error "wrong number of|arguments" }
+    using mem = P<TT<Args...>...>;//#2
 };
 
-bar<foo>::mem<int, char> b;//#3 { dg-error "invalid type" }
+bar<foo>::mem<int, char> b;//#3
 
