@@ -1,3 +1,9 @@
+2012-04-13  Jason Merrill  <jason@redhat.com>
+
+	PR c++/52824
+	* g++.dg/cpp0x/variadic123.C: New.
+	* g++.dg/cpp0x/alias-decl-15.C: Remove dg-errors.
+
 2012-04-11  Jason Merrill  <jason@redhat.com>
 
 	PR c++/52906
